[bumpversion]
current_version = 2.1.3
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:bifrostlib/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[tool:pytest]
minversion = 6.0
addopts = -ra -q --durations=0
testpaths = 
	tests
